--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li><a href="#skills" class="menu-btn">Skills</a></li>
                 <li><a href="#portfolio" class="menu-btn">Portfolio</a></li>
 
-                <li><a href="#education" class="menu-btn">Experience</a></li>
+                <li><a href="#experience" class="menu-btn">Experience</a></li>
 
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
@@ -267,7 +267,7 @@
 
 
 
-    <section class="education" id="education">
+    <section class="education" id="experience">
 
         <h2 class="title">My Experience</h2>
 
